--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     	<maven.compiler.source>1.6</maven.compiler.source>
     	<maven.compiler.target>1.6</maven.compiler.target>
   	</properties>
+ 	<scm>
+		<url>https://github.com/haimke111/Armis</url>
+		<connection>scm:haimke111:u82007190://github.com/haimke111/Armis.git</connection>
+		<developerConnection>scm:haimke111:u82007190@github.com/haimke111/Armis.git</developerConnection>
+	</scm>
 
     <dependencies>
         <dependency>
@@ -89,8 +94,17 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
+            </plugin>    
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <tagBase>https://github.com/haimke111/Armis</tagBase>
+                    <releaseProfiles>release</releaseProfiles>
+                </configuration>
+            </plugin>               
+       
         </plugins>
 
     </build>
