--- a/pom.xml
+++ b/pom.xml
@@ -99,10 +99,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.2</version>
+                <executions>
+				 <execution>
+				 <id>default</id>
+				 <goals>
+				 <goal>perform</goal>
+				 </goals>
                 <configuration>
                     <tagBase>https://github.com/haimke111/Armis</tagBase>
+                    <pomFileName>Armis/pom.xml</pomFileName>
                     <releaseProfiles>release</releaseProfiles>
                 </configuration>
+                 </execution>
+ </executions>
             </plugin>               
        
         </plugins>
