--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   	</properties>
  	<scm>
 		<url>https://github.com/haimke111/Armis</url>
-		<connection>scm:git:git://github.com/haimke111/Armis.git</connection>
+		<connection>scm:git:git@github.com/haimke111/Armis.git</connection>
 		<developerConnection>scm:git:git@github.com/haimke111/Armis.git</developerConnection>
 	</scm>
 
