--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
             <plugin>
             	<groupId>org.codehaus.mojo</groupId>
 				<artifactId>rpm-maven-plugin</artifactId>
-				<version>2.0.1</version>
+				<version>2.2.0</version>
 				<executions>
           			<execution>
           
@@ -126,6 +126,7 @@
             			</goals>
             
             			<configuration>
+            				<license>GPL (c) 2005, SWWDC</license>
               				<attach>false</attach> <!-- don't attach RPM -->
               				<group>Application/Misc</group> <!-- set RPM group -->
               				<mappings>
