--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<properties>
     	<maven.compiler.source>1.6</maven.compiler.source>
     	<maven.compiler.target>1.6</maven.compiler.target>
+  		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   	</properties>
  	<scm>
 		<url>https://github.com/haimke111/Armis</url>
@@ -47,6 +48,9 @@
 
     </dependencies>
 
+
+
+	
     <build>
 
         <plugins>
